WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148229
dispatch_group_t objects may not be retained properly when not backed by Objective-C objects under garbage collection
https://bugs.webkit.org/show_bug.cgi?id=148229
Summary
dispatch_group_t objects may not be retained properly when not backed by Obje...
David Kilzer (:ddkilzer)
Reported
2015-08-20 10:06:25 PDT
dispatch_group_t objects may not be retained properly when not backed by Objective-C objects under garbage collection. The proper way to address this is to use OSObjectPtr<>, which does the right thing regardless of whether the dispatch_group_t objects are backed by Objective-C objects or not.
Attachments
Patch
(3.54 KB, patch)
2015-08-21 10:35 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch v2
(3.74 KB, patch)
2015-08-21 10:44 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2015-08-21 10:35:12 PDT
Created
attachment 259630
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2015-08-21 10:43:15 PDT
Comment on
attachment 259630
[details]
Patch I forgot to include the header!
David Kilzer (:ddkilzer)
Comment 3
2015-08-21 10:44:54 PDT
Created
attachment 259631
[details]
Patch v2
WebKit Commit Bot
Comment 4
2015-08-21 11:37:40 PDT
Comment on
attachment 259631
[details]
Patch v2 Clearing flags on attachment: 259631 Committed
r188761
: <
http://trac.webkit.org/changeset/188761
>
WebKit Commit Bot
Comment 5
2015-08-21 11:37:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug