dispatch_group_t objects may not be retained properly when not backed by Objective-C objects under garbage collection <http://webkit.org/b/148229>

Reviewed by Eric Carlson.

When compiled with garbage collection enabled, libdispatch
objects are not backed by Objective-C objects, so they don't get
the benefit of automatic reference counting when captured by a
block or a lambda.  To address this, we use OSObjectPtr<> which
always increments the reference count of the contained object.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::beginLoadingMetadata):
Switch to use OSObjectPtr<>.


Canonical link: https://commits.webkit.org/166412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188761 268f45cc-cd09-0410-ab3c-d52691b4dbfc